--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 token:
   expiration_time: 864000000
-  secret: my_token
+  secret: user_token_native_application_changed_#1
 
 gateway:
   127.0.0.1
