--- a/user-service.yml
+++ b/user-service.yml
@@ -9,4 +9,4 @@ gateway:
   ip: 127.0.0.1
 
 order_service:
-  url: http://localhost:8000/order-service/%s/orders
+  url: http://ORDER-SERVICE/order-service/%s/orders
